--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "name": "scrapemesomethinggood",
   "version": "0.0.0",
+  "private": true,
   "description": "CL scraper",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "chalk": "1.0.0",
+    "cheerio": "0.18.0",
+    "commander": "~2.3.0",
+    "nodemailer": "~1.3.0",
+    "qs": "2.3.3"
+  }
 }
