--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "chalk": "1.0.0",
     "cheerio": "0.18.0",
-    "commander": "~2.3.0",
-    "nodemailer": "~1.3.0",
+    "commander": "2.6.0",
+    "nodemailer": "1.3.1",
     "qs": "2.3.3"
   }
 }
