--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "2.9.13",
     "chalk": "1.0.0",
     "cheerio": "0.18.0",
     "commander": "2.6.0",
     "nodemailer": "1.3.1",
-    "qs": "2.3.3"
+    "qs": "2.3.3",
+    "request": "2.53.0"
   }
 }
