--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scrapemesomethinggood",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "description": "CL scraper",
   "main": "index.js",
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "bluebird": "2.9.13",
     "chalk": "1.0.0",
